Update index.html and add images

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <body>
     <header>
       <nav>
-        <a href="#"><img src="./images/logo.svg" alt="Логотип Сучасна пекарня"></a>
+        <a href="#"
+          ><img src="./images/logo.svg" alt="Логотип Сучасна пекарня"
+        /></a>
         <!-- logo and menu -->
         <ul>
           <li><a href="#">Наші традиції</a></li>
@@ -18,7 +20,7 @@
         </ul>
       </nav>
       <!-- button -->
-       <button type="button">Замовити дзвінок</button>
+      <button type="button">Замовити дзвінок</button>
     </header>
     <main>
       <section>
@@ -57,7 +59,10 @@
             <aricle
               ><h3>Влад</h3>
               <p>Привіт, я Влад!</p>
-              <p>Мій кодитерський стаж вже 18 років. SHOP BEKERY - це наша любов, з якою ми ділимось кожен раз з Вами через нашу випічку!</p>
+              <p>
+                Мій кодитерський стаж вже 18 років. SHOP BEKERY - це наша любов,
+                з якою ми ділимось кожен раз з Вами через нашу випічку!
+              </p>
               <p>Я зроблю для вас унікальну начинку на будь-який смак!</p>
             </aricle>
           </li>
@@ -103,7 +108,9 @@
     </main>
     <footer>
       <nav>
-        <a href="#"><img src="./images/logo.svg" alt="Логотип Сучасна пекарня"></a>
+        <a href="#"
+          ><img src="./images/logo.svg" alt="Логотип Сучасна пекарня"
+        /></a>
         <ul>
           <li><a href="#">Наші традиції</a></li>
           <li><a href="#">Шеф-кухарі</a></li>
@@ -114,10 +121,18 @@
       <address>
         <ul>
           <li><a href="tel:+380960000007">+ 38 (096) 000 00 07</a></li>
-          <li><a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a></li>
-          <li><a href="https://maps.app.goo.gl/Kv93k7BGheshzwsd8" target="_blank">Україна, м. Київ, вул. Січових Стрільців 54</a></li>
-          <li><a href=""></a></li> <!-- facebook icon -->
-          <li><a href=""></a></li> <!-- instagram icon -->
+          <li>
+            <a href="mailto:shopbakery@gmail.com">shopbakery@gmail.com</a>
+          </li>
+          <li>
+            <a href="https://maps.app.goo.gl/Kv93k7BGheshzwsd8" target="_blank"
+              >Україна, м. Київ, вул. Січових Стрільців 54</a
+            >
+          </li>
+          <li><a href=""></a></li>
+          <!-- facebook icon -->
+          <li><a href=""></a></li>
+          <!-- instagram icon -->
         </ul>
         <a href="#" target="_blank">Політика конфіденційності</a>
         <p>© 2022 Дані захищені</p>
