Update index.html and add images

--- a/index.html
+++ b/index.html
@@ -8,9 +8,7 @@
   <body>
     <header>
       <nav>
-        <a href="#"
-          ><img src="./images/logo.svg" alt="Логотип Сучасна пекарня"
-        /></a>
+        <a href="#"><img src="./images/logo.svg" alt="Логотип Сучасна пекарня"/></a>
         <!-- logo and menu -->
         <ul>
           <li><a href="#">Наші традиції</a></li>
@@ -42,7 +40,7 @@
           <span>5 хвилин і замовлення готове.</span> А ще у наших пекарень
           стильний дизайн та висока якість обслуговування!
         </p>
-        <img src="./images/baker-man.jpg" alt="Фото пекаря" />
+        <img src="./images/baker-man.jpg" alt="Фото пекаря"/>
       </section>
       <section>
         <h2>Наші найкращі шеф -кухарі</h2>
@@ -109,8 +107,7 @@
     <footer>
       <nav>
         <a href="#"
-          ><img src="./images/logo.svg" alt="Логотип Сучасна пекарня"
-        /></a>
+          ><img src="./images/logo.svg" alt="Логотип Сучасна пекарня"/></a>
         <ul>
           <li><a href="#">Наші традиції</a></li>
           <li><a href="#">Шеф-кухарі</a></li>
